ci: setup sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
-sonar.projectKey=go-project
+sonar.projectKey=aledamatta_fc-sonarcloud
+sonar.organization=aledamatta
 
 sonar.sources=.
 sonar.exclusions=**/*_test.go
